# stm_uv12

./: .gitignore  .mxproject  CMakeLists.txt  Makefile  README.md  STM32Toolchain.cmake  uv12.ioc
Core/Inc/: main.h  mcp48fvb.h  oled0010.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Core/Src/: main.c  mcp48fvb.c  oled0010.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Kicad/UVA_12W_LED/: UVA_12W.kicad_sym  UVA_12W_LED.kicad_pcb  UVA_12W_LED.kicad_pro  UVA_12W_LED.kicad_sch  UVA_12W_LED_CONTROL.kicad_pcb  UVA_12W_LED_CONTROL.kicad_pro  UVA_12W_LED_CONTROL.kicad_sch  UVC_12W_LED.kicad_pcb  UVC_12W_LED.kicad_pro  UVC_12W_LED.kicad_sch  fp-lib-table  sym-lib-table
Kicad/UVA_12W_LED/UVA_12W.pretty/: BatteryClip_18mm.kicad_mod  SML-LXF3535UVC.kicad_mod  VLMU1610.kicad_mod
